--- a/Front/src/app/main/reservations/reservation-home/reservation-home.component.html
+++ b/Front/src/app/main/reservations/reservation-home/reservation-home.component.html
@@ -134,7 +134,7 @@
 
                 </div>
                 <div class="row2">
-                    <div class="showProf" (click)="verPerfil(list.id_client_traveler)">{{'SHOWPROFILE' |
+                    <div class="showProf" (click)="verPerfil(list.id_client_host)">{{'SHOWPROFILE' |
                         oTranslate}} </div>
                 </div>
             </div>
