--- a/Front/src/app/main/reservations/reservation-home/reservation-home.component.css
+++ b/Front/src/app/main/reservations/reservation-home/reservation-home.component.css
@@ -12,7 +12,7 @@
         font-weight: 800;
         font-size: 30px;
         margin: 0 0 -5px 10px;
-        color:rgb(82, 52, 82);
+        color:rgb(79, 7, 142);
         
     }
     .unread{
@@ -51,8 +51,9 @@
     display: flex;
     flex-direction: row;
     border-radius: 20px;
-    background-color: rgb(165, 150, 241);
-    border: 2px solid rgb(127, 29, 238);
+    background-color: rgb(154, 29, 238);
+   
+    border: 2px solid rgb(154, 29, 238);
     color: white;
     font-size: x-small;
     text-align: center;
@@ -122,6 +123,7 @@
     font-weight: bold;
     font-size: 13px;
    
+    margin-bottom: 5px;
 
 }
 
