--- a/Front/src/app/main/community/community-home/community-home.component.css
+++ b/Front/src/app/main/community/community-home/community-home.component.css
@@ -53,14 +53,21 @@ o-grid {
     color: inherit; 
   }
 
-.community-image {
-    object-fit: cover; /* Ajuste de imagen */
-    width: 100%; 
-    height: auto; 
-    max-width: 100%; 
-    max-height: 100%; 
-    border-radius: 20px;
+
+  .image {
+    position: relative;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    height: 100%;
+  }
+
+.community-image {
+    width: 100%;
+    height: auto;
+    object-fit: cover; 
 
     img {
         box-shadow: rgba(50, 50, 50, 5);
