--- a/Front/src/app/main/travelers/travelers-all/travelers-all.component.css
+++ b/Front/src/app/main/travelers/travelers-all/travelers-all.component.css
@@ -1,5 +1,19 @@
-o-grid {
-    row-gap: 10px;
+.activity-title {
+    text-align: center;
+    width: 100%;
+    padding: 10px 0;
+    background-color: #341777;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+    letter-spacing: 1px;
+    color: rgb(210, 190, 250);
+}
+
+.no-link-style {
+    text-decoration: none; /* Elimina el subrayado */
+    color: inherit; 
   }
 
 .grid-container {
@@ -19,7 +33,7 @@ o-grid {
     overflow: hidden;
     transition: box-shadow 0.3s;
     width: 100%; /* Ancho fijo */
-    height: 370px; /* Altura fija */
+    height: 350px; /* Altura fija */
 }
 
 .card-container:hover {
@@ -31,6 +45,7 @@ o-grid {
     justify-content: center;
     overflow: hidden;
     margin-top: 15px;
+    text-align: center; 
 }
 
 .rounded-image {
@@ -48,38 +63,38 @@ o-grid {
     text-align: center;
 }
 
-.short_desc {
-    text-align: center;
-    padding: 0 10px;
-    font-size: 12px;
-    color: #555;
-    height: 50px; /* Altura fija para la descripción */
-    font-style: italic;
+.town-name {
+    margin-top: 2px;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
+
 .chips-container {
-    display: inline-flex;
-    flex-wrap: wrap;
+    width: auto;
+    display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     margin-top: 10px;
 }
 
 .activities-chip-list {
+    display: flex;
     justify-content: center;
     align-items: center;
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    overflow: hidden;
-    width: auto;
+    flex-wrap: wrap; /* Agrega flex-wrap para que los chips se envuelvan en múltiples líneas */
+    margin-top: 10px;
+    
 }
 
 .activitiesChip {
     font-size: 0.6em;
     height: auto;
     line-height: normal;
-    padding: 5px 10px;
+    padding: 3px 5px;
     pointer-events: none;
     background-color: rgb(210, 190, 250);
     margin: 1px; 
