--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -5,7 +5,7 @@
         <!-- Pestaña de para el perfil por defecto-->
         <mat-tab class="mat-tab" label="{{ 'PROFILE_TAB' | oTranslate }}">
             <o-form #form attr="profile_detail" service="users" entity="myUser" fxLayout="column" show-header="yes"
-                header-actions="U" #oDetailForm keys="user_" keys-sql-types="VARCHAR" show-header-navigation="yes"
+                header-actions="U" #oDetailForm keys="user_" keys-sql-types="VARCHAR" show-header-navigation="no"
                 (onUpdate)="saveActivitiesInDataBase()">
 
                 <div fxLayout="row" fxLayoutAlign="start stretch" fxLayoutGap="25px">
@@ -96,7 +96,7 @@
         <!-- Pestaña para las funcionalidades de anfitriona -->
         <mat-tab class="mat-tab" label="{{ 'HOST_TAB' | oTranslate }}">
             <o-form #formHost attr="host_detail" service="users" entity="myUser" fxLayout="column" show-header="yes"
-                header-actions="U" keys="user_" keys-sql-types="VARCHAR" show-header-navigation="yes">
+                header-actions="U" keys="user_" keys-sql-types="VARCHAR" show-header-navigation="no">
                 <o-column class="host_data" title="HOST_DATA" layout-align="start stretch" fxFlex="100" icon="badge">
                     <o-nif-input attr="nif" label="NIF" required="yes" fxFlex="100" required="yes"
                         max-length="25"></o-nif-input>
