--- a/Front/src/app/main/home/home.component.html
+++ b/Front/src/app/main/home/home.component.html
@@ -2,7 +2,7 @@
   <!-- <img class="background" src="../../../assets/images/foto_home.jpg">
   <img class=logo src="../../../assets/images/logo300.png" alt="logo"> -->
   
-  <h1 class="home-title">Tu próxima aventura empieza hoy...</h1>
+  <h1 class="home-title">Tu próxima aventura empieza hoy</h1>
 
   <div class="img-steps">
     <img class="steps" src="../../../assets/images/steps.png" alt="steps">
