--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.css
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.css
@@ -16,29 +16,25 @@
     margin-top: 25px;
 }
 
-.activitiesChip {
-    font-size: 1em;
-    height: 0px;
-    line-height: 5px;
-    padding: 0 10px;
-    margin: 0;
-    pointer-events: none;
-    background-color: rgb(210, 190, 250);
-}
-
-
-mat-chip:hover {
-    background-color: inherit;
-}
-
-.mat-chip-list {
+.chips-container {
     display: flex;
     justify-content: center;
-    align-items: center;
-    list-style: none;
-    width: 100%;
-    box-sizing: border-box;
+    flex-wrap: wrap; /* Esto permite que los divs se envuelvan a la siguiente línea si no caben en una sola línea */
 }
+
+.activitiesChip {
+    display: inline-block;
+    padding: 3px 14px;
+    margin: 3px;
+    border: 1px solid rgb(210, 190, 250);
+    border-radius: 5px;
+    background-color: rgb(210, 190, 250);
+    color: white;
+    font-size: 14px; /* Ajusta el tamaño de la fuente según sea necesario */
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
 
 .actselect {
     margin-top: 25px;
