--- a/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.html
+++ b/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.html
@@ -49,12 +49,12 @@
             </o-column>
             <!-- Actividades -->  
             <o-column class="activities" title="ACTIVITIES" layout-align="start stretch" fxFlex="95">
-              <mat-chip-list class="activities-chip-list">
-                <mat-chip class="activitiesChip" *ngFor="let activity of arrayActivitiesClient" [disabled]="false"
-                  color="primary">
+              
+              <div class="chips-container" fxLayout="row" fxLayoutGap="8px">
+                <div class="activitiesChip" *ngFor="let activity of arrayActivitiesClient">
                   {{ activity | oTranslate }}
-                </mat-chip>
-              </mat-chip-list>
+                </div>
+              </div>
             </o-column>
           </o-column>
         </div>
