--- a/Front/src/app/main/reservations/reservation-home/reservation-received-detail/reservation-received-detail.component.html
+++ b/Front/src/app/main/reservations/reservation-home/reservation-received-detail/reservation-received-detail.component.html
@@ -77,7 +77,7 @@
                     layout-padding color="primary" (onClick)="cancelReservation(id_reservation)"></o-button>
                 <o-button *ngIf="id_status == 5" class="deleteReservationButton" type="RAISED"
                     label="DELETE_B" layout-padding color="primary"
-                    (onClick)="(deleteReservationFn(id_reservation))"></o-button>
+                    (onClick)="deleteReservationFn(id_reservation)"></o-button>
 
             </div>
         </div>
