--- a/Front/src/app/main/reservations/reservation-home/reservation-sent-detail/reservation-sent-detail.component.html
+++ b/Front/src/app/main/reservations/reservation-home/reservation-sent-detail/reservation-sent-detail.component.html
@@ -81,7 +81,7 @@
                 <o-button *ngIf="id_status == 1" class="cancel" type="RAISED" label="CANCEL" layout-padding
                     color="primary" (onClick)="cancelReservation(id_reservation)"></o-button>
                 <o-button *ngIf="id_status == 3 || id_status == 4 || id_status == 2" class="deleteReservationButton" type="RAISED" label="DELETE_B"
-                    layout-padding color="primary" (onClick)="(deleteReservationFn(id_reservation))"></o-button>
+                    layout-padding color="primary" (onClick)="deleteReservationFn(id_reservation)"></o-button>
             </div>
         </div>
     </o-form>
