--- a/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-detail/travelers-reservation-detail.component.html
+++ b/Front/src/app/main/travelers/travelers-reservation/travelers-reservation-detail/travelers-reservation-detail.component.html
@@ -46,7 +46,7 @@
             </div>
             <div class="buttons" *ngIf="id_status == 3">
                 <o-button class="deleteReservationButton" type="RAISED" label="DELETE" layout-padding color="primary"
-                    (onClick)="(deleteReservationFn(id_reservation))"></o-button>
+                    (onClick)="deleteReservationFn(id_reservation)"></o-button>
             </div>
         </div>
       
@@ -55,12 +55,12 @@
 
         <div class="buttons" *ngIf="id_status == 1">
             <o-button class="calcelReservationButton" type="RAISED" label="Cancel Reservation" layout-padding color="primary"
-                (onClick)="(cancelReservation(id_reservation))"></o-button>
+                (onClick)="cancelReservation(id_reservation)"></o-button>
         </div>
 
         <o-textarea-input *ngIf="id_status == 1" attr="message_cancellation"
                 label="{{'CANCEL_RESP' | oTranslate}} " fxFlex="70" 
-                max-length="200" rows="2"></o-textarea-input>
+                max-length="50" rows="2"></o-textarea-input>
 
         
 
