--- a/Front/src/app/main/reservations/reservation-home/reservation-home.component.css
+++ b/Front/src/app/main/reservations/reservation-home/reservation-home.component.css
@@ -1,5 +1,24 @@
 /* ESTILOS BANDEJA DE ENTRADA DE MENSAJES */
 
+.bContainer{
+    width: 950px;
+    height: auto;
+    margin-left: 20px;
+    margin-bottom: 100px;
+    padding: 0 10px 30px 10px;
+    background-color: rgb(193, 234, 235);
+    border-radius: 20px;
+
+}
+.b2Container{
+    width: 950px;
+    height: auto;
+    margin-left: 20px;
+    margin-bottom: 20px;
+    padding: 0 10px 30px 10px;
+    background-color: rgb(172, 196, 234);
+    border-radius: 20px;
+}
 .head_t {
     width: 900px;
     display: flex;
@@ -27,7 +46,8 @@
     height: auto;
     display: flex;
     flex-direction: row;
-    margin: 50px;
+    
+   
     
     
 }
@@ -109,9 +129,6 @@
 .itemrow1 {
     width: 350px;
     height: 60px;
-
-    
-    
     margin-left: 8px;
     font-size: small;
     overflow: hidden;
@@ -122,7 +139,6 @@
     letter-spacing: 1px;
     font-weight: bold;
     font-size: 13px;
-   
     margin-bottom: 5px;
 
 }
@@ -130,7 +146,6 @@
 .itemrow2 {
     width: 200px;
     height: 60px;
-  
     text-align: right;
     font-size: small;
     display: flex;
