traducciones y cambio tamaño de algunos cuadros de input de texto

--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -103,7 +103,7 @@
                         columns="town_name;id_town" visible-columns="town_name" value-column="id_town"
                         class="input-padding" required="yes" sort="ASC" searchable="true"></o-combo>
                         <o-row class="mailciudades">{{ 'CITIESMAIL' | oTranslate }}</o-row>
-                    <o-textarea-input class="host_desc" attr="description" label="DESCRIPTION" placeholder="{{ 'LONGDESC' | oTranslate }}"
+                    <o-textarea-input class="host_desc" attr="description" label="DESCRIPTIONHOST" placeholder="{{ 'LONGDESC' | oTranslate }}"
                         fxFlex="100" required="yes" max-length="1000"></o-textarea-input>
                     <o-text-input attr="phonenumber" label="PHONENUMBER" fxFlex="100" required="yes"
                         max-length="15"></o-text-input>
