--- a/Front/src/app/login/login.component.html
+++ b/Front/src/app/login/login.component.html
@@ -2,6 +2,8 @@
   <div class="login-outer-container">
 
     <div class="login-bg-container">
+      <h1 class="title-login">Bienvenida a una forma diferente de viajar</h1>
+      <p class="text-login">Únete hoy mismo a la comunidad de sheTravel para desbloquear experiencias de viaje únicas</p>
     </div>
 
     <div class="wrapp-login">
