--- a/Front/src/app/main/home/home.component.html
+++ b/Front/src/app/main/home/home.component.html
@@ -38,7 +38,7 @@
 
 
     <div>
-        <h2 class="top-activities">Actividades preferidas</h2>
+        <h2 class="top-activities">Intereses populares</h2>
         <p>Échale un vistazo a las actividades más seleccionadas por nuestras anfitrionas</p>
         <o-grid class="activitiesGrid" #activitiesB attr="activitiesB" service="activities"
             entity="activitycount" keys="id_activity" columns="activity_name;id_activity;host_activity" orderable="true"
