--- a/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
+++ b/Front/src/app/main/travelers/travelers-home/travelers-home.component.html
@@ -104,7 +104,7 @@
                         <o-row class="mailciudades">{{ 'CITIESMAIL' | oTranslate }}</o-row>
                     <o-textarea-input class="host_desc" attr="description" label="DESCRIPTION" placeholder="{{ 'LONGDESC' | oTranslate }}"
                         fxFlex="100" required="yes" max-length="1000"></o-textarea-input>
-                    <o-text-input attr="phonenumber" label="PHONENUMBER" fxFlex="100" required="yes"
+                    <o-text-input attr="phonenumber" label="PHONENUMBERCONT" fxFlex="100" required="yes"
                         max-length="15"></o-text-input>
                     <o-email-input attr="email" label="EMAILCONT" placeholder="example@example.com" fxFlex="100"
                         required="yes"></o-email-input>
