--- a/Front/src/app/main/reservations/reservation-home/profile-dialog/profile-dialog.component.css
+++ b/Front/src/app/main/reservations/reservation-home/profile-dialog/profile-dialog.component.css
@@ -20,6 +20,34 @@
     font-style: italic;
 }
 
+
+.chips-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap; /* Esto permite que los divs se envuelvan a la siguiente línea si no caben en una sola línea */
+}
+
+.activitiesChip {
+    display: inline-block;
+    padding: 3px 8px;
+    margin: 2px;
+    border-radius: 5px;
+    background-color: rgb(210, 190, 250);
+    color: #341777;
+    font-size: 10px; /* Ajusta el tamaño de la fuente según sea necesario */
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+
+.buttons-container {
+    display: flex;      
+    justify-content: center; 
+    flex-wrap: nowrap;
+    width: 100%; 
+}
+
+
 .profile-content {
     display: flex;
     flex-wrap: wrap;
