--- a/Front/src/app/main/towns/towns-detail/towns-detail.component.css
+++ b/Front/src/app/main/towns/towns-detail/towns-detail.component.css
@@ -80,10 +80,9 @@ o-grid {
     display: inline-block;
     padding: 3px 8px;
     margin: 2px;
-    border: 1px solid rgb(210, 190, 250);
     border-radius: 5px;
     background-color: rgb(210, 190, 250);
-    color: white;
+    color: #341777;
     font-size: 10px; /* Ajusta el tamaño de la fuente según sea necesario */
     cursor: pointer;
     transition: background-color 0.3s ease;
