--- a/Front/src/app/main/travelers/travelers-all/travelers-all.component.css
+++ b/Front/src/app/main/travelers/travelers-all/travelers-all.component.css
@@ -92,10 +92,9 @@
     display: inline-block;
     padding: 3px 8px;
     margin: 2px;
-    border: 1px solid rgb(210, 190, 250);
     border-radius: 5px;
     background-color: rgb(210, 190, 250);
-    color: white;
+    color: #341777;
     font-size: 10px; /* Ajusta el tamaño de la fuente según sea necesario */
     cursor: pointer;
     transition: background-color 0.3s ease;
