--- a/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.css
+++ b/Front/src/app/main/travelers/travelers-detail/travelers-detail.component.css
@@ -60,13 +60,12 @@
 
 .activitiesChip {
     display: inline-block;
-    padding: 3px 12px;
+    padding: 3px 10px;
     margin: 2px;
-    border: 1px solid rgb(210, 190, 250);
     border-radius: 5px;
     background-color: rgb(210, 190, 250);
-    color: white;
-    font-size: 14px; /* Ajusta el tamaño de la fuente según sea necesario */
+    color: #341777;
+    font-size: 12px; /* Ajusta el tamaño de la fuente según sea necesario */
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
