--- a/Front/src/app/login/login.component.html
+++ b/Front/src/app/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="full-page">
   <div class="login-outer-container">
 
-    <div class="login-bg-container">
-      <h1 class="title-login">Bienvenida a una forma diferente de viajar</h1>
-      <p class="text-login">Únete hoy mismo a la comunidad de sheTravel para desbloquear experiencias de viaje únicas</p>
+    <div class="login-bg-container" fxLayout="column">
+      <h1 class="title-login" >{{'WELLCOME' | oTranslate}}</h1>
+      <p class="text-login" >{{'WELLCOME1' | oTranslate}}</p>
     </div>
 
     <div class="wrapp-login">
