--- a/Front/src/app/main/home/home.component.scss
+++ b/Front/src/app/main/home/home.component.scss
@@ -23,8 +23,10 @@
     justify-content: center;
     align-items: center;
     margin: auto;
-    max-width: 75%; /* Limita el ancho del logotipo al 80% del contenedor */
-    margin-bottom: 65px;
+    max-width: 80%; /* Limita el ancho del logotipo al 80% del contenedor */
+    margin-top: 30px;
+    margin-bottom: 100px;
+    
 }
 
 .top-activities, .top-towns {
