--- a/Front/src/app/main/reservations/reservation-home/reservation-received-detail/reservation-received-detail.component.html
+++ b/Front/src/app/main/reservations/reservation-home/reservation-received-detail/reservation-received-detail.component.html
@@ -73,7 +73,7 @@
             </o-textarea-input>
 
             <div class="buttonsBox">
-                <o-button *ngIf="id_status == 1" class="cancel" type="RAISED" label="CANCEL"
+                <o-button *ngIf="id_status == 1" class="cancel" type="RAISED" label="CANCEL_R"
                     layout-padding color="primary" (onClick)="cancelReservation(id_reservation)"></o-button>
                 <o-button *ngIf="id_status == 5" class="deleteReservationButton" type="RAISED"
                     label="DELETE_B" layout-padding color="primary"
