--- a/Front/src/app/main/reservations/reservation-home/reservation-home.component.html
+++ b/Front/src/app/main/reservations/reservation-home/reservation-home.component.html
@@ -10,7 +10,7 @@
 
         <o-grid-item>
             <div class="head_t">
-                <o-row class="title">{{'RECEIVED_R' | oTranslate}} {{'RECEIVED_R2' | oTranslate}}</o-row>
+                <o-row class="title"><span class="rec">{{'RECEIVED_R' | oTranslate}}</span>  &nbsp; <span class="rec1">{{'RECEIVED_R1' | oTranslate}}</span> &nbsp; &nbsp;<span class="rec2">{{'RECEIVED_R2' | oTranslate}}</span> </o-row>
 
                 </div>
             </o-grid-item>
@@ -92,7 +92,7 @@
 
             <o-grid-item>
                 <div class="head_t">
-                    <o-row class="title">{{'SENT_R' | oTranslate}} {{'SENT_R2' | oTranslate}}</o-row>
+                    <o-row class="title"><span class="rec">{{'SENT_R' | oTranslate}}</span> &nbsp; <span class="rec1">{{'SENT_R1' | oTranslate}}</span>&nbsp; &nbsp;<span class="rec2">{{'SENT_R2' | oTranslate}}</span></o-row>
                 </div>
             </o-grid-item>
 
