--- a/Front/src/app/main/reservations/reservation-home/reservation-sent-detail/reservation-sent-detail.component.html
+++ b/Front/src/app/main/reservations/reservation-home/reservation-sent-detail/reservation-sent-detail.component.html
@@ -78,7 +78,7 @@
 
            <!-- botones para cancelar y borrar -->
             <div class="buttonsBox">
-                <o-button *ngIf="id_status == 1" class="cancel" type="RAISED" label="CANCEL" layout-padding
+                <o-button *ngIf="id_status == 1" class="cancel" type="RAISED" label="CANCEL_R" layout-padding
                     color="primary" (onClick)="cancelReservation(id_reservation)"></o-button>
                 <o-button *ngIf="id_status == 3 || id_status == 4 || id_status == 2" class="deleteReservationButton" type="RAISED" label="DELETE_B"
                     layout-padding color="primary" (onClick)="deleteReservationFn(id_reservation)"></o-button>
