--- a/Front/src/app/register/register/register.component.css
+++ b/Front/src/app/register/register/register.component.css
@@ -81,10 +81,11 @@
     margin-top: 130px !important;
     text-align: center;
     font-size: 18px;
-    font-weight:bold;
+    font-weight:500;
     letter-spacing: 0.5px;
     color: white;
     line-height: 30px;
+
     
     
 }
