botón cierre profile

--- a/Front/src/app/login/login.component.scss
+++ b/Front/src/app/login/login.component.scss
@@ -58,7 +58,7 @@ mat-icon {
 
     .title-login{
       text-align: center;
-      width: 60%;
+      width: 70%;
       padding: 15px 0;
       color: white;
     
@@ -68,15 +68,14 @@ mat-icon {
       align-self: center;
       align-content: center;
       font-size: 35px;
-      font-family: 'Bitter', serif;
-      
+      font-weight: 700;
       margin-bottom: 0;
     }
 
     .text-login {
       margin-top: 0;
       text-align: center;
-      width: 45%;
+      width: 50%;
       color: white;
       display: flex;
       text-align: center;
