--- a/Front/src/app/main/home/home.component.scss
+++ b/Front/src/app/main/home/home.component.scss
@@ -14,7 +14,7 @@
   align-items: center;
   font-weight: bold;
   font-size: 40px;
-  letter-spacing: 1px;
+  // letter-spacing: 1px;
   color: #341777;
 }
 
@@ -24,7 +24,7 @@
     align-items: center;
     margin: auto;
     max-width: 80%; /* Limita el ancho del logotipo al 80% del contenedor */
-    margin-top: 30px;
+    margin-top: 50px;
     margin-bottom: 100px;
     
 }
